--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.11",
+    "@angular/cdk": "^19.2.16",
     "@angular/common": "^19.2.11",
     "@angular/compiler": "^19.2.11",
     "@angular/core": "^19.2.11",
+    "@angular/fire": "^19.1.0",
     "@angular/forms": "^19.2.11",
+    "@angular/material": "^19.2.16",
     "@angular/platform-browser": "^19.2.11",
     "@angular/platform-browser-dynamic": "^19.2.11",
     "@angular/router": "^19.2.11",
+    "firebase": "^11.7.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
